# cubeb-rs

./: .gitmodules  Cargo.toml  README.md  rustfmt.toml
.circleci/: config.yml
.github/workflows/: build.yml  nightly-lints.yml
ci/image/: Dockerfile  update-image.md
cubeb-api/: Cargo.toml  README.md
cubeb-api/examples/: devices.rs  tone.rs
cubeb-api/examples/common/: mod.rs
cubeb-api/libcubeb-sys/: build.rs  lib.rs
cubeb-api/src/: call.rs  context.rs  dev_coll.rs  devices.rs  lib.rs  sample.rs  stream.rs  util.rs
cubeb-backend/: Cargo.toml  build.rs
cubeb-backend/src/: capi.rs  ffi.rs  lib.rs  log.rs  ops.rs  traits.rs
cubeb-backend/tests/: test_capi.rs
cubeb-core/: Cargo.toml  build.rs
cubeb-core/src/: builders.rs  call.rs  channel.rs  context.rs  device.rs  device_collection.rs  error.rs  ffi.rs  ffi_types.rs  format.rs  lib.rs  log.rs  stream.rs  try_call.rs  util.rs
cubeb-sys/: Cargo.toml  build.rs  libcubeb_vendored.tar
cubeb-sys/src/: audio_dump.rs  callbacks.rs  channel.rs  context.rs  device.rs  documentation_libcubeb_stubs.rs  lib.rs  log.rs  mixer.rs  panner.rs  resampler.rs  stream.rs
cubeb-sys/systest/: Cargo.toml  build.rs
examples/: tone.rs
libcubeb-sys/: Cargo.toml  build.rs  lib.rs
src/: call.rs  context.rs  devices.rs  error.rs  lib.rs  stream.rs  util.rs
systest/: Cargo.toml  build.rs
systest/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
