[package]
name = "cubeb"
version = "0.5.1"
authors = ["Dan Glastonbury <dglastonbury@mozilla.com>"]
license = "ISC"
readme = "README.md"
keywords = ["cubeb"]
repository = "https://github.com/djg/cubeb-rs"
homepage = "https://github.com/djg/cubeb-rs"
description = """
Bindings to libcubeb for interacting with system audio from rust.
"""
categories = ["api-bindings"]

[badges]
circle-ci = { repository = "djg/cubeb-rs" }

[features]
gecko-in-tree = ["cubeb-core/gecko-in-tree"]

[dependencies]
cubeb-core = { path = "../cubeb-core", version = "0.5.0" }