[package]
name = "cubeb"
version = "0.33.0"
authors = ["Dan Glastonbury <dglastonbury@mozilla.com>"]
license = "ISC"
readme = "README.md"
keywords = ["cubeb"]
repository = "https://github.com/mozilla/cubeb-rs"
homepage = "https://github.com/mozilla/cubeb-rs"
description = """
Bindings to libcubeb for interacting with system audio from Rust.
"""
categories = ["api-bindings"]

[features]
gecko-in-tree = ["cubeb-core/gecko-in-tree"]

[dependencies]
cubeb-core = { path = "../cubeb-core", version = "0.33.0" }
