[package]
name = "cubeb-backend"
version = "0.8.0"
authors = ["Dan Glastonbury <dglastonbury@mozilla.com>"]
license = "ISC"
keywords = ["cubeb"]
repository = "https://github.com/djg/cubeb-rs"
homepage = "https://github.com/djg/cubeb-rs"
description = """
Bindings to libcubeb internals to facilitate implementing cubeb backends in rust.
"""
categories = ["api-bindings"]

[badges]
circle-ci = { repository = "djg/cubeb-rs" }

[features]
gecko-in-tree = ["cubeb-core/gecko-in-tree"]

[dependencies]
cubeb-core = { path = "../cubeb-core", version = "0.8.0" }
