[package]
name = "cubeb-core"
version = "0.10.3"
authors = ["Dan Glastonbury <dglastonbury@mozilla.com>"]
license = "ISC"
keywords = ["cubeb"]
repository = "https://github.com/mozilla/cubeb-rs"
homepage = "https://github.com/mozilla/cubeb-rs"
description = """
Common types and definitions for cubeb rust and C bindings. Not intended for direct use.
"""
categories = ["api-bindings"]

[badges]
circle-ci = { repository = "mozilla/cubeb-rs" }

[features]
gecko-in-tree = ["cubeb-sys/gecko-in-tree"]

[dependencies]
bitflags = "2"
cubeb-sys = { path = "../cubeb-sys", version = "0.10.3" }
