[package]
name = "cubeb-core"
version = "0.33.0"
authors = ["Dan Glastonbury <dglastonbury@mozilla.com>"]
license = "ISC"
keywords = ["cubeb"]
repository = "https://github.com/mozilla/cubeb-rs"
homepage = "https://github.com/mozilla/cubeb-rs"
description = """
Common types and definitions for cubeb Rust and C bindings. Not intended for direct use.
"""
categories = ["api-bindings"]

[features]
gecko-in-tree = ["cubeb-sys/gecko-in-tree"]

[dependencies]
bitflags = "1.2.0"
cubeb-sys = { path = "../cubeb-sys", version = "0.33" }

[build-dependencies]
cc = "1.1.30"
