[package]
name = "cubeb-sys"
version = "0.4.0"
authors = ["Dan Glastonbury <dglastonbury@mozilla.com>"]
repository = "https://github.com/djg/cubeb-rs"
license = "ISC"
description = "Native bindings to the cubeb library"

links = "cubeb"
build = "build.rs"

[build-dependencies]
pkg-config = "0.3"
cmake = "0.1.2"
gcc = "0.3"
