[package]
name = "cubeb-sys"
version = "0.9.0"
authors = ["Dan Glastonbury <dglastonbury@mozilla.com>"]
repository = "https://github.com/djg/cubeb-rs"
license = "ISC"
description = "Native bindings to the cubeb library"

links = "cubeb"
build = "build.rs"

[badges]
circle-ci = { repository = "djg/cubeb-rs" }

[features]
gecko-in-tree = []

[build-dependencies]
pkg-config = "0.3"
cmake = "0.1.2"
